--- a/src/_numerals.scss
+++ b/src/_numerals.scss
@@ -23,17 +23,24 @@
 #two {
   position: relative;
   transform-origin: top left;
+  /* animation: moveUp 500ms linear 1000ms forwards,
+             bob 400ms linear 1700ms forwards,
+             tiltLeft 500ms linear 2200ms forwards; */
   animation: moveUp 500ms linear 1000ms forwards,
              bob 400ms linear 1700ms forwards,
-             tiltLeft 500ms linear 2250ms forwards;
+             tiltLeft 500ms linear 2200ms forwards;
 }
 
 #one {
   position: relative;
-  transform-origin: center center;
+  //transform-origin: center center;
+  transform-origin: top right;
+  /* animation: moveUp 500ms linear 1250ms forwards,
+             bob 400ms linear 1800ms forwards,
+             tiltRight 500ms linear 2200ms forwards; */
   animation: moveUp 500ms linear 1250ms forwards,
              bob 400ms linear 1800ms forwards,
-             tiltRight 500ms linear 2250ms forwards;
+             tiltRight 500ms linear 2200ms forwards;
 }
 
 #one::before,
@@ -84,7 +91,7 @@
 
   #one::before,
   #two::before {
-    top: -2.1vh;
+    top: -2vh;
   }
 
   #one::after,
@@ -130,7 +137,7 @@
 
   #one::before,
   #two::before {
-    top: -2.1vw;
+    top: -2vw;
   }
 
   #one::after,
@@ -160,7 +167,7 @@
 
   #one::before,
   #two::before {
-    top: -2.1vh;
+    top: -2vh;
   }
 
   #one::after,
