--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,7 @@ body {
 
 main {
   position: relative;
+  height: 90vh;
 }
 
 main,
